--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+torch = "^2.2.1"
 hydra-core = "^1.3.2"
 mlx = "^0.5.0"
 numpy = "^1.26.4"
